# FastObjects

./: .gitignore  README.md  README.pt-BR.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
benchmarks/: RESULTS.md  benchmark_2d.py
benchmarks/arena/: bench_arcade.py  bench_fastobjects.py  bench_pygame.py  bench_pyglet.py  bench_raylib.py  common.py  gen_assets.py  run_all.py
benchmarks/lab/: exp_buffer_upload.py  exp_soa_layout.py  spike_hosts.py
benchmarks/multi_image/: bench_arcade.py  bench_fastobjects.py  bench_pyglet.py  gen_images.py  run_all.py
benchmarks/packing/: bench_packing.py
benchmarks/text/: bench_fastobjects.py  bench_font_build.py  bench_freetype_gl.py  bench_pygame.py  bench_pyglet.py  bench_shaping.py  run_all.py
docs/: CONVENTIONS.md  RESEARCH.md
docs/site/: api.md  api.pt.md  getting-started.md  getting-started.pt.md  index.md  index.pt.md  (+2 more)
examples/: arcade_interop.py  atlas_animation.py  bunnymark.py  pygame_interop.py  pyglet_interop.py  shapes_input.py  text_hud.py
fastobjects/: __init__.py  _batchcore.py  _context.py  atlas.py  batch.py  errors.py  external.py  font.py  group.py  input.py  layer.py  shapes.py  shaping.py  text.py  window.py
tests/: conftest.py  test_atlas.py  test_atlas_sprites.py  test_batch.py  test_context.py  test_despawn.py  test_dirty.py  test_edge_cases.py  test_external.py  test_font.py  test_frame_loop.py  test_group.py  test_harness.py  test_input.py  test_layer.py  test_renderer.py  test_run_all.py  test_shapes.py  test_shaping.py  test_smoke.py  test_text.py  test_window.py
(+32 files in other folders)
