[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastobjects"
version = "0.3.0"
description = "The fastest 2D object rendering library for Python"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Enzo-Azevedo", email = "enzoteste3.g@gmail.com" }]
dependencies = [
    "numpy>=1.26",
    "moderngl>=5.10",
    "glfw>=2.7",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
docs = ["mkdocs-material>=9", "mkdocs-static-i18n>=1"]
bench = [
    "pygame-ce>=2.5",
    "arcade>=3.0",
    "raylib>=5.5",
]

[tool.hatch.build.targets.wheel]
packages = ["fastobjects"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

